# cadence_movevm

./: .gitignore  Makefile  README.md  go.mod  main.go  main_dynamic.go  main_test.go
lib/: sample.h
lib/hello/src/: lib.rs
lib/sample/: Cargo.toml  build.rs  perf.data
lib/sample/benches/: benchmark_movevm.rs
lib/sample/go_lib/: Makefile  encode.go  go.mod  libmain.h  main.go  main_test.go  move_runtime.go  types.go  values.go
lib/sample/src/: Move.toml  lib.rs  main.rs  vm.rs
lib/sample/src/sources/: M.move  M.mv.asm  M.txt  M2.move  M2.mv.asm  fib.move
