[package]
name = "sample"
version = "0.1.0"
edition = "2021"

[lib]
# If you only wanted dynamic library, you'd use only "cdylib".
# If you only wanted static library, you'd use only "staticlib".
# This demo shows both. See https://doc.rust-lang.org/reference/linkage.html
# for more information.
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.2"
move-vm-runtime = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "f34e73d" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "f34e73d" }
move-vm-test-utils = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "f34e73d" }
move-vm-types = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "f34e73d" }
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "f34e73d" }
move-vm-integration-tests = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "f34e73d" }
criterion = "0.3"

[[bench]]
name = "benchmark_movevm"
harness = false