[package]
name = "sample"
version = "0.1.0"
edition = "2021"

[lib]
# If you only wanted dynamic library, you'd use only "cdylib".
# If you only wanted static library, you'd use only "staticlib".
# This demo shows both. See https://doc.rust-lang.org/reference/linkage.html
# for more information.
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.2"
move-vm-runtime = { path = "/home/dev/work/aptos-core/third_party/move/move-vm/runtime" }
move-core-types = { path = "/home/dev/work/aptos-core/third_party/move/move-core/types" }
move-vm-test-utils = { path = "/home/dev/work/aptos-core/third_party/move/move-vm/test-utils" }
move-vm-types = { path = "/home/dev/work/aptos-core/third_party/move/move-vm/types" }
move-binary-format = { path = "/home/dev/work/aptos-core/third_party/move/move-binary-format" }
move-vm-integration-tests = { path = "/home/dev/work/aptos-core/third_party/move/move-vm/integration-tests" }
criterion = "0.3"

[[bench]]
name = "benchmark_movevm"
harness = false